--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -1009,11 +1009,11 @@ chipone,enable-wakeup;
 };
 
 &thermal_zones{
-		ap_ntc: ap_ntc {
-			polling-delay = <0>; /* milliseconds */
-			polling-delay-passive = <0>; /* milliseconds */
-			thermal-sensors = <&tboard_thermistor1>;
-		};
+//		ap_ntc: ap_ntc {
+//			polling-delay = <0>; /* milliseconds */
+//			polling-delay-passive = <0>; /* milliseconds */
+//			thermal-sensors = <&tboard_thermistor1>;
+//		};
 		pa_therm1: pa_therm1 {
 			polling-delay = <0>; /* milliseconds */
 			polling-delay-passive = <0>; /* milliseconds */
