--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -108,3 +108,6 @@ CONFIG_TOUCHSCREEN_MTK_TOUCH=""
 # CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
 CONFIG_MTK_VOW_GVA_SUPPORT=y
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
+
+#enable thermal power on/off algo
+CONFIG_MOTO_THERMAL_POWER_OFF_ALGO=y
