--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
@@ -85,3 +85,6 @@ CONFIG_MTK_VICKY_EEPROM_PROJECT=y
 CONFIG_MTK_VOW_GVA_SUPPORT=y
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
 # CONFIG_UFSSHPB is not set
+
+#enable thermal power on/off algo
+CONFIG_MOTO_THERMAL_POWER_OFF_ALGO=y
