charger/dts: set charger cv compensation
Set charger cv compensation for devonn.
 This is to set impedance compensation.
 The voltage battery of CV=4.48V already includes the line impedance voltage drop.
 MTK adds compensation by default and needs to be removed.
 Otherwise, the battery charGing voltage will be over 4.5v,

Change-Id: I4456ec421023ffe81a1709e83937984aaad68ab5
Signed-off-by: Wei Zhang <wingte93@motorola.com>
Reviewed-on: https://gerrit.mot.com/2389342
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Guocheng Wang <wanggc6@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-charger.dtsi
@@ -183,3 +183,9 @@
 	non_std_ac_charger_current = <1000000>;
 	charging_host_charger_current = <1000000>;
 };
+
+&mt6375_chg {
+	cv = <4480>;
+	ircmp_r = <0>;
+	ircmp_v = <0>;
+};
