arm64/dts: devonf: sd card switch to fast power down.
Enabel mt6369 fast power down for sd card, to improve power down
time from 260ms to 9us.

eservice: ALPS07360346
pick from devonn dtsi update: https://gerrit.mot.com/#/c/2318755/

Change-Id: I78c4bb158971a5da720423b6a3422da145c3491e
Signed-off-by: shenying2 <shenying2@mt.com>
Reviewed-on: https://gerrit.mot.com/2391232
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Ying Shen <shenying@motorola.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonf-common-overlay.dtsi
@@ -285,7 +285,7 @@ chipone,enable-wakeup;
 
 &mmc1 {
 	cd-gpios = <&pio 14 GPIO_ACTIVE_HIGH>;
-	vmmc-supply = <&mt6369_vmch>;
+	vmmc-supply = <&mt6369_vmch_eint_low>;
 };
 #include "devonf-touch.dtsi"
 
