devon: wld: factory turn off SWTP and SAR
1. Moto SAR control service only integrated in customer SW; doesn't take effect on factory SW.
2. need to always disable SWTP in factory SW.

Change-Id: I90ac683413ad04945292b52da56281f0f74e1ddc
Reviewed-on: https://gerrit.mot.com/2393021
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Shengqi Wang <wangsq2@motorola.com>
Reviewed-by: Yifu Lin <linyf@mt.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/eccci/Kconfig
+++ b/drivers/misc/mediatek/eccci/Kconfig
@@ -62,6 +62,15 @@ config MOTO_TESLA_SWTP_CUST
 	  it is disabled.
 	  The option default disabled.
 
+config MOTO_DISABLE_SWTP_FACTORY
+	bool "ECCCI tesla swtp customization"
+	depends on MTK_ECCCI_DRIVER
+	help
+	  This option enables devonn swtp customization, if yes,
+	  then it is supported, if no,
+	  it is disabled.
+	  The option default disabled.
+
 config MOTO_DEVONN_SWTP_CUST
 	bool "ECCCI tesla swtp customization"
 	depends on MTK_ECCCI_DRIVER
