--- a/arch/arm64/configs/ext_config/factory-mgk_64_k510.config
+++ b/arch/arm64/configs/ext_config/factory-mgk_64_k510.config
@@ -13,4 +13,5 @@
 # You can check the .config file to verify that your configuration option is
 # being set as expected.
 #
-
+# Add swtp customization
+CONFIG_MOTO_DISABLE_SWTP_FACTORY=y
