devonn: repair camera af&Vibrator question[2/5]
devonn:
-repair camera af&Vibrator question
-add Vibrator control vam

Change-Id: Ida8607f6935717cb9009fMontana1c564615ebf5e9b8
Reviewed-on: https://gerrit.mot.com/2394327
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Darong Huang <huangdra@motorola.com>
Reviewed-by: <wangyc27@mt.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Submit-Approved: Jira

--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-devonn.config
@@ -26,6 +26,7 @@ CONFIG_HQ_CAMERA_LDO=m
 
 #Moto devonn Camera
 CONFIG_MOT_DEVONN_CAMERA_PROJECT=y
+CONFIG_AF_NOISE_ELIMINATION=y
 
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
