--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -47,6 +47,7 @@ CONFIG_DRM_PANEL_TONGXINGDA_FT8726_FHDP_DPHY_VDO_120HZ=m
 CONFIG_DRM_PANEL_CSOT_FT8726_FHDP_DPHY_VDO_120HZ=m
 CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
 CONFIG_OF_GPIO=y
+CONFIG_AF_NOISE_ELIMINATION=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 #enable zram writeback
 CONFIG_ZRAM_WRITEBACK=y
