--- a/arch/arm64/boot/dts/mediatek/mt6855.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6855.dts
@@ -599,7 +599,7 @@
 			    8250.nr_uarts=4 \
 			    androidboot.hardware=mt6855 \
 			    initcall_debug=1 transparent_hugepage=never \
-			    vmalloc=400M swiotlb=noforce cma=64M allow_file_spec_access \
+			    vmalloc=400M swiotlb=noforce allow_file_spec_access \
 			    firmware_class.path=/vendor/firmware pelt=8 \
 			    loop.max_part=7";
 		kaslr-seed = <0 0>;
@@ -948,14 +948,14 @@
 
 	memory_ssmr_features: memory-ssmr-features {
 		compatible = "mediatek,memory-ssmr-features";
-		svp-region-based-size = <0 0x4000000>;
-		svp-page-based-size = <0 0x19000000>;
-		tui-size = <0 0x4000000>;
-		wfd-region-based-size = <0 0x4000000>;
-		wfd-page-based-size = <0 0x4000000>;
-		prot-region-based-size = <0 0x10000000>;
+		svp-region-based-size = <0 0x2000000>;
+		svp-page-based-size = <0 0x16000000>;
+		tui-size = <0 0>;
+		wfd-region-based-size = <0 0>;
+		wfd-page-based-size = <0 0>;
+		prot-region-based-size = <0 0>;
 		prot-page-based-size = <0 0>;
-		sapu-data-shm-size = <0 0x2000000>;
+		sapu-data-shm-size = <0 0>;
 	};
 
 	ssmr {
