kernel/dts:devonf:add aw99703 backlight init brightness config
devonf: add aw99703 bl ic init brightness with min level
to avoid bright light case in dark env when display on

Change-Id: I7de471cd291fdbeab5b16b7df3178561a8d71e23
Signed-off-by: hujing3 <hujing3@mt.com>
Reviewed-on: https://gerrit.mot.com/2395438
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
@@ -42,6 +42,7 @@
 		aw99703,map-type = <4>; /* 0 exponential, 4 linear */
 		aw99703,work-mode = <1>; /* backlight */
                 aw99703,default-brightness = <1024>;
+		aw99703,reinit-brightness = <15>;
 		aw99703,init-seq-enable = <1>;
 		aw99703,init-seq = <0x02 0x04>,
 				<0x03 0xC7>,
