arm/dts: devonf: add bias ocp2138
devonf: add bias ocp2138 for
	fixed the value to 5.5v

Change-Id: I1fe5595407a3e80ba8ed4d30e2d2d7ec6be6a21f
Signed-off-by: longch98 <longch98@motorola.com>
Reviewed-on: https://gerrit.mot.com/2395478
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jing Hu <hujing3@mt.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-display.dtsi
@@ -14,6 +14,20 @@
 	force_dyn_mipi_change;
 };
 
+&i2c6 {
+	id = <6>;
+
+	i2c_lcd_bias_mtk:i2c_lcd_bias@3e {
+		compatible = "ocp,bias_ocp2138";
+		reg = <0x3e>;
+		ocp,lcd-bias-enn-gpio = <&pio 134 0>;
+		ocp,lcd-bias-enp-gpio = <&pio 182 0>;
+		biasp_en_pin = <182>;
+		biasn_en_pin = <134>;
+		status = "okay";
+	};
+};
+
 &i2c7 {
 	id = <7>;
 
