--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -75,6 +75,9 @@ CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
 # Add swtp customization
 CONFIG_MOTO_DEVONF_SWTP_CUST=y
 
+# Add charger pe5 customization
+CONFIG_MOTO_PE50_CV_LOWER_BOUND_GAP_OFF=y
+
 CONFIG_MICRON_UFSHID=y
 # CONFIG_UFSTW is not set
 CONFIG_SCSI_SKHID=y
