--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -955,4 +955,10 @@ config MOTO_THERMAL_POWER_OFF_ALGO
         help
           This is to enable MOTO Moto MTK thermal power on/off algo.
 
+config MOTO_PE50_CV_LOWER_BOUND_GAP_OFF
+	bool "This is config charger pe5 cv lower bound gap"
+	default n
+	help
+	  This is config charger pe5 cv lower bound gap
+
 endif # POWER_SUPPLY
