--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -95,3 +95,6 @@ CONFIG_I2C_CHARDEV=y
 # CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
 CONFIG_MTK_VOW_GVA_SUPPORT=y
 CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
+
+#enable thermal power on/off algo
+CONFIG_MOTO_THERMAL_POWER_OFF_ALGO=y
