drm/panel: Devonn: Lower mipi HS tx voltage
Modify: Reduce mipi HS voltage 60mv
 lower the voltage to solve mipi the hard test problem

Change-Id: I0e4fd0ee539075c2d207ba3b6c6a0aa6125e62c0
Reviewed-on: https://gerrit.mot.com/2399831
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -137,6 +137,7 @@
 		pm-enable-gpios = <&pio 161 0>;
 		reset-gpios = <&pio 95 0>;
 		rc-enable = <1>;
+		hs-tx-vol-flag = <0xa>;// value 6 ~ d
 		pinctrl-names = "default";
 		port {
 			panel_in2: endpoint {
