kernel/Devon: add ft8726 configuration for tp double tap
Modify:
   Add ft8726 touch double tap

Change-Id: Iec3638b8e2325b4b215fc78f936e17b6f26ecce8
Reviewed-on: https://gerrit.mot.com/2402236
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jun Weng <wengjun1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
@@ -32,6 +32,7 @@
         chipone,def-build-id = <0x0101>;
         chipone,def-config-id = <0x0001>;
 	chipone,supported_gesture_type = <0x06>;
+	focaltech,supported_gesture_type = <0x06>;
 	focaltech,reset-gpio = <&pio 3 0x0>;
 	focaltech,irq-gpio = <&pio 22 0x0>;
 	focaltech,max-touch-number = <10>;
