--- a/arch/arm64/boot/dts/mediatek/devonf-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonf-charger.dtsi
@@ -217,6 +217,7 @@
 	df-serialnum = "SB18D61156";
 	//#include "bat_setting/mt6879_battery_nf50_atl_5000mah.dtsi"
 	#include "bat_setting/mt6855_battery_table_lwn_5000.dtsi"
+	#include "bat_setting/mt6855_battery_table_ff.dtsi"
 
 };
 
