Support evb dts for aion
Remove un-used dts.

Change-Id: I0fccdd9bf6dbdafce9ebccf88f7f70a416326ad5
Reviewed-on: https://gerrit.mot.com/2405408
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiaofeng Wang <wangxf14@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-evb-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-evb-overlay.dts
@@ -27,4 +27,5 @@
 };
 
 #include <aion_evb/cust.dtsi>
+#include "mediatek/cust_mt6879_camera_v4l2_tesla.dtsi"
 /*End of this file, DO NOT ADD ANYTHING HERE*/
