--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_aion.dtsi
@@ -1,6 +1,46 @@
 // SPDX-License-Identifier: GPL-2.0
 /* Copyright (c) 2020 MediaTek Inc. */
 #include <dt-bindings/clock/mt6879-clk.h>
+
+&soc {
+
+	cam_main_avdd_ldo: gpio120-fixed{
+		compatible = "regulator-fixed";
+		regulator-name = "cam_main_avdd_ldo";
+		regulator-min-microvolt = <2800000>;
+		regulator-max-microvolt = <2800000>;
+		gpio = <&pio 120 0x0>;
+		enable-active-high;
+	};
+
+	cam_main_dvdd_ldo: gpio59-fixed{
+		compatible = "regulator-fixed";
+		regulator-name = "cam_main_dvdd_ldo";
+		regulator-min-microvolt = <1100000>;
+		regulator-max-microvolt = <1100000>;
+		gpio = <&pio 59 0x0>;
+		enable-active-high;
+	};
+
+	cam_main_ois_dvdd_ldo: gpio8-fixed{
+		compatible = "regulator-fixed";
+		regulator-name = "cam_main_ois_dvdd_ldo";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		gpio = <&pio 8 0x0>;
+		enable-active-high;
+	};
+
+	cam_fm_avdd_ldo: gpio160-fixed{
+		compatible = "regulator-fixed";
+		regulator-name = "cam_fm_avdd_ldo";
+		regulator-min-microvolt = <2800000>;
+		regulator-max-microvolt = <2800000>;
+		gpio = <&pio 160 0x0>;
+		enable-active-high;
+	};
+};
+
 &mtk_composite_v4l2_2 {
 	port@0 {
 		main_af_endpoint: endpoint {
@@ -8,6 +48,11 @@
 		};
 	};
 	port@1 {
+		fm_af_endpoint: endpoint {
+			remote-endpoint = <&fm_af>;
+		};
+	};
+	port@2 {
 		wide_af_endpoint: endpoint {
 			remote-endpoint = <&wide_af>;
 		};
@@ -47,10 +92,10 @@
 
 &i2c2 {
 	camera_af_main@18 {
-		compatible = "mediatek,mot_dubai_ak7377a";
+		compatible = "mediatek,mot_aion_gt9764";
 		reg = <0x18>;
-		vin-supply = <&cam_ois_avdd_ldo>;
-		vdd-supply = <&cam_main_uw_afvdd_ldo>;
+		vin-supply = <&cam_main_ois_dvdd_ldo>;
+		vdd-supply = <&cam_main_afdd_ldo>;
 		port {
 			main_af: endpoint {
 				remote-endpoint = <&main_af_endpoint>;
@@ -59,11 +104,25 @@
 	};
 };
 
+
+&i2c4 {
+	camera_af_fm@18 {
+		compatible = "mediatek,mot_aion_gt9772";
+		reg = <0x18>;
+		vin-supply = <&cam_fm_afvdd_ldo>;
+		port {
+			fm_af: endpoint {
+				remote-endpoint = <&fm_af_endpoint>;
+			};
+		};
+	};
+};
+
 &i2c8 {
 	camera_af_wide@18 {
-		compatible = "mediatek,mot_dubai_dw9800v";
+		compatible = "mediatek,mot_aion_dw9800v";
 		reg = <0x18>;
-		vin-supply = <&cam_main_uw_afvdd_ldo>;
+		vin-supply = <&cam_uw_afvdd_ldo>;
 		port {
 			wide_af: endpoint {
 				remote-endpoint = <&wide_af_endpoint>;
@@ -110,7 +169,7 @@
 			nvmem-cell-names = "rg_csi";
 			port {
 				seninf_csi_port_1_in: endpoint {
-					remote-endpoint = <&sensor4_out>;
+					remote-endpoint = <&sensor2_out>;
 				};
 			};
 		};
@@ -127,17 +186,6 @@
 			};
 		};
 
-		seninf_csi_port_3: seninf_csi_port_3 {
-			compatible = "mediatek,seninf";
-			csi-port = "3";
-			nvmem-cells = <&csi_efuse3>;
-			nvmem-cell-names = "rg_csi";
-			port {
-				seninf_csi_port_3_in: endpoint {
-					remote-endpoint = <&sensor2_out>;
-				};
-			};
-		};
 };
 
 /* CAMERA GPIO standardization */
@@ -174,14 +222,14 @@
 	};
 	camera_pins_cam0_rst_0: cam0@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO66__FUNC_GPIO66>;
+			pinmux = <PINMUX_GPIO33__FUNC_GPIO33>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam0_rst_1: cam0@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO66__FUNC_GPIO66>;
+			pinmux = <PINMUX_GPIO33__FUNC_GPIO33>;
 			slew-rate = <1>;
 			output-high;
 		};
@@ -218,138 +266,64 @@
 	};
 	camera_pins_cam1_rst_0: cam1@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO65__FUNC_GPIO65>;
+			pinmux = <PINMUX_GPIO32__FUNC_GPIO32>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam1_rst_1: cam1@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO65__FUNC_GPIO65>;
+			pinmux = <PINMUX_GPIO32__FUNC_GPIO32>;
 			slew-rate = <1>;
 			output-high;
 		};
 	};
-#if 0
-	camera_pins_cam1_pdn_0: cam1@2 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO200__FUNC_GPIO200>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
-	camera_pins_cam1_pdn_1: cam1@3 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO200__FUNC_GPIO200>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-#endif
+
 	camera_pins_cam2_mclk_off: camera_pins_cam2_mclk_off {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO101__FUNC_GPIO101>;
+			pinmux = <PINMUX_GPIO102__FUNC_GPIO102>;
 			drive-strength = <1>;
 		};
 	};
 	camera_pins_cam2_mclk_2ma: camera_pins_cam2_mclk_2ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO101__FUNC_CMMCLK2>;
+			pinmux = <PINMUX_GPIO102__FUNC_CMMCLK3>;
 			drive-strength = <0>;
 		};
 	};
 	camera_pins_cam2_mclk_4ma: camera_pins_cam2_mclk_4ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO101__FUNC_CMMCLK2>;
+			pinmux = <PINMUX_GPIO102__FUNC_CMMCLK3>;
 			drive-strength = <1>;
 		};
 	};
 	camera_pins_cam2_mclk_6ma: camera_pins_cam2_mclk_6ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO101__FUNC_CMMCLK2>;
+			pinmux = <PINMUX_GPIO102__FUNC_CMMCLK3>;
 			drive-strength = <2>;
 		};
 	};
 	camera_pins_cam2_mclk_8ma: camera_pins_cam2_mclk_8ma {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO101__FUNC_CMMCLK2>;
+			pinmux = <PINMUX_GPIO102__FUNC_CMMCLK3>;
 			drive-strength = <3>;
 		};
 	};
 	camera_pins_cam2_rst_0: cam2@0 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO125__FUNC_GPIO125>;
+			pinmux = <PINMUX_GPIO98__FUNC_GPIO98>;
 			slew-rate = <1>;
 			output-low;
 		};
 	};
 	camera_pins_cam2_rst_1: cam2@1 {
 		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO125__FUNC_GPIO125>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-#if 0
-	camera_pins_cam2_pdn_0: cam2@2 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO199__FUNC_GPIO199>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
-	camera_pins_cam2_pdn_1: cam2@3 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO199__FUNC_GPIO199>;
-			slew-rate = <1>;
-			output-high;
-		};
-	};
-#endif
-	camera_pins_cam3_mclk_off: camera_pins_cam3_mclk_off {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO102__FUNC_GPIO102>;
-			drive-strength = <1>;
-		};
-	};
-	camera_pins_cam3_mclk_2ma: camera_pins_cam3_mclk_2ma {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO102__FUNC_CMMCLK3>;
-			drive-strength = <0>;
-		};
-	};
-	camera_pins_cam3_mclk_4ma: camera_pins_cam3_mclk_4ma {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO102__FUNC_CMMCLK3>;
-			drive-strength = <1>;
-		};
-	};
-	camera_pins_cam3_mclk_6ma: camera_pins_cam3_mclk_6ma {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO102__FUNC_CMMCLK3>;
-			drive-strength = <2>;
-		};
-	};
-	camera_pins_cam3_mclk_8ma: camera_pins_cam3_mclk_8ma {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO102__FUNC_CMMCLK3>;
-			drive-strength = <3>;
-		};
-	};
-	camera_pins_cam3_rst_0: cam3@0 {
-		pins_cmd_dat {
-			pinmux = <PINMUX_GPIO98__FUNC_GPIO98>;
-			slew-rate = <1>;
-			output-low;
-		};
-	};
-	camera_pins_cam3_rst_1: cam3@1 {
-		pins_cmd_dat {
 			pinmux = <PINMUX_GPIO98__FUNC_GPIO98>;
 			slew-rate = <1>;
 			output-high;
 		};
 	};
+
 	camera_pins_default: camdefault {
 	};
 };
@@ -373,7 +347,7 @@
 
 	sensor0: sensor0@20 {
 		compatible = "mediatek,imgsensor";
-		sensor-names = "mot_dubai_ov50a_mipi_raw";
+		sensor-names = "mot_aion_ov50e_mipi_raw";
 		reg = <0x20>;
 		#thermal-sensor-cells = <0>;
 		pinctrl-names = "mclk_off",
@@ -394,7 +368,7 @@
 		avdd-supply = <&cam_main_avdd_ldo>;
 		dvdd-supply = <&cam_main_dvdd_ldo>;
 		dovdd-supply = <&cam_iovdd_ldo>;
-		afvdd-supply = <&cam_ois_avdd_ldo>;
+		afvdd-supply = <&cam_main_ois_dvdd_ldo>;
 
 		clocks = <&topckgen_clk CLK_TOP_UNIVPLL_192M_D32>,
 			<&topckgen_clk CLK_TOP_UNIVPLL_192M_D16>,
@@ -432,7 +406,7 @@
 
 	sensor1: sensor1@20 {
 		compatible = "mediatek,imgsensor";
-		sensor-names = "mot_dubai_ov32c_mipi_raw";
+		sensor-names = "mot_aion_gd2sm03_mipi_raw";
 		reg = <0x20>;
 		#thermal-sensor-cells = <0>;
 		pinctrl-names = "mclk_off",
@@ -450,8 +424,8 @@
 		pinctrl-5 = <&camera_pins_cam1_rst_0>;
 		pinctrl-6 = <&camera_pins_cam1_rst_1>;
 
-		avdd-supply = <&cam_uw_fm_avdd_ldo>;
-		dvdd-supply = <&cam_uw_fm_dvdd_ldo>;
+		avdd-supply = <&cam_fm_avdd_ldo>;
+		dvdd-supply = <&cam_fm_dvdd_ldo>;
 		dovdd-supply = <&cam_iovdd_ldo>;
 
 		clocks = <&topckgen_clk CLK_TOP_UNIVPLL_192M_D32>,
@@ -481,17 +455,17 @@
 	#address-cells = <1>;
 	#size-cells = <0>;
 
-	//DEPTH
-	mtk_camera_eeprom2:camera_eeprom2@20 {
+	//UW
+	mtk_camera_eeprom2:camera_eeprom2@50 {
 		compatible = "mediatek,camera_eeprom";
-		reg = <0x20>;
+		reg = <0x50>;
 		status = "okay";
 	};
 
-	sensor2: sensor2@6e {
+	sensor2: sensor2@40 {
 		compatible = "mediatek,imgsensor";
-		sensor-names = "mot_dubai_gc02m1b_mipi_raw";
-		reg = <0x6e>;
+		sensor-names = "mot_aion_hi1336_mipi_raw";
+		reg = <0x40>;
 		#thermal-sensor-cells = <0>;
 		pinctrl-names = "mclk_off",
 				"mclk_2mA",
@@ -508,60 +482,9 @@
 		pinctrl-5 = <&camera_pins_cam2_rst_0>;
 		pinctrl-6 = <&camera_pins_cam2_rst_1>;
 
-		avdd-supply = <&cam_uw_fm_avdd_ldo>;
+		avdd-supply = <&cam_uw_avdd_ldo>;
+		dvdd-supply = <&cam_uw_dvdd_ldo>;
 		dovdd-supply = <&cam_iovdd_ldo>;
-
-		clocks = <&topckgen_clk CLK_TOP_UNIVPLL_192M_D32>,
-			<&topckgen_clk CLK_TOP_UNIVPLL_192M_D16>,
-			<&topckgen_clk CLK_TOP_F26M_CK_D2>,
-			<&topckgen_clk CLK_TOP_UNIVPLL_192M_D10>,
-			<&topckgen_clk CLK_TOP_UNIVPLL_192M_D8>,
-			<&topckgen_clk CLK_TOP_UNIVPLL_D6_D16>,
-			<&topckgen_clk CLK_TOP_UNIVPLL_192M_D4>,
-			<&topckgen_clk CLK_TOP_UNIVPLL_D6_D8>,
-			<&topckgen_clk CLK_TOP_CAMTG3_SEL>;
-		clock-names = "6", "12", "13", "19.2", "24", "26", "48", "52", "mclk";
-		status = "okay";
-
-		port {
-			sensor2_out: endpoint {
-				remote-endpoint = <&seninf_csi_port_3_in>;
-			};
-		};
-	};
-
-	//UW
-	mtk_camera_eeprom4:camera_eeprom4@50 {
-		compatible = "mediatek,camera_eeprom";
-		reg = <0x50>;
-		status = "okay";
-	};
-
-	sensor4: sensor4@40 {
-		compatible = "mediatek,imgsensor";
-		sensor-names = "mot_dubai_hi1336_mipi_raw";
-		reg = <0x40>;
-		#thermal-sensor-cells = <0>;
-		pinctrl-names = "mclk_off",
-				"mclk_2mA",
-				"mclk_4mA",
-				"mclk_6mA",
-				"mclk_8mA",
-				"rst_low",
-				"rst_high";
-		pinctrl-0 = <&camera_pins_cam3_mclk_off>;
-		pinctrl-1 = <&camera_pins_cam3_mclk_2ma>;
-		pinctrl-2 = <&camera_pins_cam3_mclk_4ma>;
-		pinctrl-3 = <&camera_pins_cam3_mclk_6ma>;
-		pinctrl-4 = <&camera_pins_cam3_mclk_8ma>;
-		pinctrl-5 = <&camera_pins_cam3_rst_0>;
-		pinctrl-6 = <&camera_pins_cam3_rst_1>;
-
-		avdd-supply = <&cam_uw_fm_avdd_ldo>;
-		dvdd-supply = <&cam_uw_fm_dvdd_ldo>;
-		dovdd-supply = <&cam_iovdd_ldo>;
-		//afvdd-supply = <&rt5133_ldo3>;
-		//avdd1-supply = <&rt5133_ldo5>;
 
 		clocks = <&topckgen_clk CLK_TOP_UNIVPLL_192M_D32>,
 			<&topckgen_clk CLK_TOP_UNIVPLL_192M_D16>,
@@ -576,7 +499,7 @@
 		status = "okay";
 
 		port {
-			sensor4_out: endpoint {
+			sensor2_out: endpoint {
 				remote-endpoint = <&seninf_csi_port_1_in>;
 			};
 		};
@@ -598,10 +521,5 @@
 			polling-delay = <0>; /* milliseconds */
 			polling-delay-passive = <0>; /* milliseconds */
 			thermal-sensors = <&sensor2>;
-		};
-		camera4: camera4 {
-			polling-delay = <0>; /* milliseconds */
-			polling-delay-passive = <0>; /* milliseconds */
-			thermal-sensors = <&sensor4>;
 		};
 };
