--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
@@ -43,7 +43,7 @@ CONFIG_ZRAM_WRITEBACK=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
 CONFIG_MTK_VIDEO_AW36515=m
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_ov50a_mipi_raw mot_dubai_ov32c_mipi_raw mot_dubai_gc02m1b_mipi_raw mot_dubai_hi1336_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_aion_hi1336_mipi_raw"
 # CONFIG_RT4831A_I2C is not set
 CONFIG_SND_SMARTPA_AW882XX=y
 CONFIG_SND_I2S1=y
