dts/display: tesla: add the config of rode's panel
Move the rode's panel to tesla.
So Add the drivers for it.
Kernel only support 4 panels.
Remove the oldest panel ,that can add a new panel.

Change-Id: Idcfc1f7ba4e9c9e2d8949225af4d5d3c72b2386a
Signed-off-by: houdz1 <houdz1@mt.com>
Reviewed-on: https://gerrit.mot.com/2411686
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key
(cherry picked from commit 4c735084336e609b7f1d67ff91942ab0ab75e2d1)

--- a/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
@@ -147,13 +147,14 @@
 			};
 		};
 	};
+
 	panel4@0 {
 		/delete-property/ compatible;
 		/delete-property/ pm-enable-gpios;
 		/delete-property/ reset-gpios;
 		/delete-property/gate-ic;
 
-		compatible = "tianma,nt37701,cmd,144hz";
+		compatible = "tianma,nt37701,cmd,144hz,rode";
 		reg = <1>;
 		pm-enable-gpios = <&pio 164 0>,
                           <&pio 103 0>,
