arm/dts: config basic charge for landon na
config basic charge
1.bc12
2.pd 15w
3.pe2 7.5w
4.charge pump and wlc NA

Change-Id: I2364d4a457b0ff7e850c0a80ccc65a0fb3b24d04
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2414047
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -84,6 +84,10 @@
 	sc_input_current = <3000000>;
 };
 
+&mtk_ctd {
+	bootmode = <&chosen>;
+};
+
 &charger {
 	battery_cv = <4480000>;
 	max_charger_voltage = <14500000>;
@@ -92,11 +96,14 @@
 	ac_charger_input_current = <1500000>;
 	charging_host_charger_current = <1500000>;
 	/*pe5 && pdc && pe2 && wlc*/
-	fast_charging_indicator = <0x36>;
+	//fast_charging_indicator = <0x36>;
 	/*swchg + 1CP*/
-	charger_configuration= <3>;
+	//charger_configuration= <3>;
+        charger_configuration= <0>;
+	fast_charging_indicator = <0x6>;
+
 	wireless_factory_max_current = <3000000>;
-	wireless_factory_max_input_current = <1150000>;
+	wireless_factory_max_input_current = <600000>;
 	enable_dynamic_mivr;
 	/*mmi config*/
 	mmi,iterm-ma = <250>;
