arm/dts: add fuel-gauge nfg1000 dts
add fuel-gauge nfg1000 dts
nfg1000 bringup.

Change-Id: I6c1c5155d462876e880271a039582b47a8fe32c0
Signed-off-by: liuyc20 <liuyc20@mt.com>
Reviewed-on: https://gerrit.mot.com/2414079
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -202,6 +202,11 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&bq25960_int_default>;
 	};
+
+	NFG1000@55 {
+		compatible = "HXZY,nfg1000";
+		reg = <0x55>;
+	};
 };
 
 &pd_adapter{
