Devonn/kernel/dts:Add LDO TP dts configs
Modify:
 Add tianma_ldo TP dts configuration

Change-Id: I176324e0f378cca790e2ebd7456b9e69d0b09af3
Signed-off-by: wuzhifu01 <wingte49@motorola.com>
Reviewed-on: https://gerrit.mot.com/2414755
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jun Weng <wengjun1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-pvt-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-pvt-overlay.dts
@@ -26,5 +26,16 @@
 	};
 };
 
+/* TOUCH start */
+
+&spi3 {
+
+	touch@0{
+
+		chipone,cs-gpio = <&pio 74 0x0>;
+		chipone,ldo_en_flag = <1>;
+	};
+};
+/* TOUCH end */
 #include <devonn_pvt/cust.dtsi>
 /*End of this file, DO NOT ADD ANYTHING HERE*/
