Devonn/kernel/dts:Add LDO display dts configs
Modify:
 Add tianma_ldo lcd project configuration

Change-Id: If92f4769589a4f703138a60515406945ee9c02a9
Signed-off-by: wuzhifu01 <wingte49@motorola.com>
Reviewed-on: https://gerrit.mot.com/2414759
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Dezhen Hou <houdz1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-display.dtsi
@@ -24,6 +24,7 @@
 		ocp,lcd-bias-enp-gpio = <&pio 183 0>;
 		biasp_en_pin = <183>;
 		biasn_en_pin = <8>;
+		ldo_en_pin = <158>;
 		status = "okay";
 	};
 
