dts/display: aion: add the config of tianma vtdr6115 panel
dts/display:
- add the config of tianma vtdr6115 panel for aion
- delete unused panel configs from aion

Change-Id: I0d0201f99cf15ee04fa58a2f5c83fbc12a406f2c
Signed-off-by: wangyq13 <wangyq13@mt.com>
Reviewed-on: https://gerrit.mot.com/2416151
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-display.dtsi
@@ -110,7 +110,7 @@
 		/delete-property/ reset-gpios;
 		/delete-property/gate-ic;
 
-		compatible = "tianma,nt37701,cmd,144hz";
+		compatible = "tianma,vtdr6115,vdo,144hz";
 		reg = <2>;
 		pm-enable-gpios = <&pio 164 0>,
                           <&pio 103 0>,
@@ -121,28 +121,6 @@
 		lhbm-enable;
 		port {
 			panel_in2: endpoint {
-				remote-endpoint = <&dsi_out>;
-			};
-		};
-	};
-
-	panel3@0 {
-		/delete-property/ compatible;
-		/delete-property/ pm-enable-gpios;
-		/delete-property/ reset-gpios;
-		/delete-property/gate-ic;
-
-		compatible = "tianma,nt37701,cmd,144hz";
-		reg = <1>;
-		pm-enable-gpios = <&pio 164 0>,
-                          <&pio 103 0>,
-                          <&pio 165 0>,
-                          <&pio 166 0>;
-		reset-gpios = <&pio 97 0>;
-		pinctrl-names = "default";
-		lhbm-enable;
-		port {
-			panel_in3: endpoint {
 				remote-endpoint = <&dsi_out>;
 			};
 		};
