--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -911,6 +911,17 @@ config DRM_PANEL_CSOT_FT8726_FHDP_DPHY_VDO_120HZ
 	  Say Y here if you want to enable support for DRM_PANEL_CSOT_FT8726_FHDP_DPHY_VDO_120HZ
 	  panel. It provides a MIPI DSI interface to host.
 
+config DRM_PANEL_TIANMA_VTDR6115_655_FHDP_DPHY_VDO_144HZ
+	tristate "TIANMA 1080*2400 DSC DPHY VDO MODE 144HZ PANEL"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for TIANMA VTDR6115 DSC
+	  DPHY cmd mode Full HD Plus 144HZ panel. The panel has a 1080x2400
+	  resolution and uses 30-bits RGB per pixel. It provides a
+	  MIPI DSI interface to host.
+
 config DRM_MEDIATEK_PANEL
 	tristate "drm panel common driver"
 	depends on OF
