arm64/dt: aion: config nfc device node
config nfc device node for st21nfc


Change-Id: I211982f904b79124b437a93d40976a004408af0b
Signed-off-by: wuwl10 <wuwl10@mt.com>
Reviewed-on: https://gerrit.mot.com/2417900
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yue Sun <sunyue5@mt.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-aion-common-overlay.dtsi
@@ -97,14 +97,20 @@
 
 &i2c3 {
 	status = "okay";
-	nfc_pn5xx: nfc_pn5xx@28 {
-		compatible = "nxp,pn5xx";
-		reg = <0x28>;
-		interrupt-parent = <&pio>;
-		interrupts = <19 IRQ_TYPE_LEVEL_HIGH>;
-		nxp,pn544-irq = <&pio 19 0>;
-		nxp,pn544-ven = <&pio 13 0>;
-		nxp,pn544-fd = <&pio 18 0>;
+	st21nfc: st21nfc@08 {
+		compatible = "mediatek,nfc";
+		reg = <0x08>;
+		status = "okay";
+	};
+};
+
+&soc {
+	nfc {
+		compatible = "mediatek,nfc-gpio-v2";
+		gpio-rst = <13>;
+		gpio-rst-std = <&pio 13 0x0>;
+		gpio-irq = <19>;
+		gpio-irq-std = <&pio 19 0x0>;
 		status = "okay";
 	};
 };
