--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -5647,6 +5647,10 @@
 		};
 	};
 
+	irq_nfc:irq_nfc {
+		compatible = "mediatek,irq_nfc-eint";
+	};
+
 	mmqos_wrapper {
 			compatible = "mediatek,mt6879-mmqos-wrapper";
 	};
