driver: remove mtk_mt6375 fuel-gauge driver
aion project will use 3rd fuel-gauge.
so remove mtk fuel-gauge

Change-Id: Ifade857d7776fba485074ad56f53b0645f4a508b
Signed-off-by: liuyc20 <liuyc20@mt.com>
Reviewed-on: https://gerrit.mot.com/2418441
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
@@ -63,6 +63,8 @@ CONFIG_MOTO_LIGHT_1_SENSOR=y
 # Add swtp customization
 CONFIG_MOTO_AION_SWTP_CUST=y
 
+# CONFIG_GAUGE_MT6375 is not set
+
 CONFIG_MICRON_UFSHID=y
 # CONFIG_UFSTW is not set
 CONFIG_SCSI_SKHID=y
