--- a/drivers/misc/mediatek/flashlight/v4l2/Kconfig
+++ b/drivers/misc/mediatek/flashlight/v4l2/Kconfig
@@ -23,7 +23,7 @@ config MTK_VIDEO_LM3644
 	  Say M here if you want to compile this driver as a module.
 
 config MTK_VIDEO_AW36515
-	tristate "LM3644 dual flash driver support"
+	tristate "AW36515 dual flash driver support"
 	depends on I2C && VIDEO_V4L2 && MEDIA_CONTROLLER
 	depends on MEDIA_CAMERA_SUPPORT
 	select REGMAP_I2C
@@ -32,6 +32,19 @@ config MTK_VIDEO_AW36515
 	  flash, torch LEDs.
 
 	  Say M here if you want to compile this driver as a module.
+
+
+config MTK_VIDEO_AW36518
+	tristate "AW36518 flash driver support"
+	depends on I2C && VIDEO_V4L2 && MEDIA_CONTROLLER
+	depends on MEDIA_CAMERA_SUPPORT
+	select REGMAP_I2C
+	help
+	  This is a driver for the aw36515 dual flash controllers. It controls
+	  flash, torch LEDs.
+
+	  Say M here if you want to compile this driver as a module.
+
 
 config MTK_VIDEO_SY7806
 	tristate "SY7806 dual flash driver support"
