back light bringup
kernel:
- add light_1 handle

Change-Id: I58fea333846ea6940f7bd4a74af3a566b4f6a657
Signed-off-by: hongrz1 <hongrz1@mt.com>
Reviewed-on: https://gerrit.mot.com/2419430
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jianqiu Huang <huangjq9@motorola.com>
Reviewed-by: Lijun Chen <chenlj2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-aion.config
@@ -57,6 +57,8 @@ CONFIG_MTK_ENABLE_GENIEZONE=m
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
+#add light_1
+CONFIG_MOTO_LIGHT_1_SENSOR=y
 
 # Add swtp customization
 CONFIG_MOTO_AION_SWTP_CUST=y
