arm64/configs: cleanup secure features of zeroed smem on devonf
All other ssmr memory are zeroed except svp by (CR).
Clean up secure feature options with zeroed smem.

Change-Id: I10cb5c371cb478cd0a36f08325f76ecdcbe2a5ff
Reviewed-on: https://gerrit.mot.com/2419828
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhangqing Huang <huangzq2@motorola.com>
Reviewed-by: Qiong Xie <xieq2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonf.config
@@ -114,3 +114,9 @@ CONFIG_MTK_VOW_BARGE_IN_SUPPORT=y
 
 #enable thermal power on/off algo
 CONFIG_MOTO_THERMAL_POWER_OFF_ALGO=y
+
+#disable tui since tui-size = <0 0> in mt6855.dts
+# CONFIG_TRUSTONIC_TRUSTED_UI is not set
+#disable prot since prot-region-base-size = <0 0> in mt6855.dts
+# CONFIG_MTK_PROT_MEM_SUPPORT is not set
+
