PD: Add moto private charge protocol
add moto private charge protocol to implement 68w fast charGing.
Use PD VDM for authenticaion and Use HMAC-Sha256
encryption algorithms for security.

Change-Id: I049cd7c11e2eec28ba172c4b16661b0ce3e88405
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2419893
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/aion-charger.dtsi
@@ -360,3 +360,10 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&mmi_control_wls_default>;
 };
+
+&mt6375_typec {
+	dpm_caps {
+		/* 0: disable, 1: prefer_ufp, 2: prefer_dfp */
+		dr_check = <2>;
+	};
+};
