--- a/drivers/misc/mediatek/typec/tcpc/Makefile
+++ b/drivers/misc/mediatek/typec/tcpc/Makefile
@@ -21,7 +21,7 @@ tcpc_class-objs += tcpci_event.o \
 		pd_process_evt_dbg.o pd_process_evt_tcp.o pd_process_evt_com.o \
 		pd_policy_engine_src.o pd_policy_engine_snk.o pd_policy_engine_ufp.o pd_policy_engine_vcs.o \
 		pd_policy_engine_dfp.o pd_policy_engine_dr.o pd_policy_engine_drs.o pd_policy_engine_prs.o \
-		pd_policy_engine_dbg.o pd_policy_engine_com.o pd_dpm_alt_mode_dc.o
+		pd_policy_engine_dbg.o pd_policy_engine_com.o pd_dpm_alt_mode_dc.o pd_dpm_mmi_adapter.o
 endif
 obj-$(CONFIG_TCPC_CLASS) += tcpc_class.o tcpci_late_sync.o pd_dbg_info.o rt_pd_manager.o
 
