Devonn/arm64:Move cs gpio to devonn-touch.dts
Modify:
 Move cs gpio to devonn-touch.dts

Change-Id: I423a788cf6dc8a432966376bd98fdc6967728594
Signed-off-by: bijiaming <wingte73@motorola.com>
Reviewed-on: https://gerrit.mot.com/2419923
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jun Weng <wengjun1@motorola.com>
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/devonn-touch.dtsi
@@ -27,6 +27,7 @@
 
         chipone,rst-gpio = <&pio 3 0x0>;
         chipone,irq-gpio = <&pio 22 0x0>;
+        chipone,cs-gpio = <&pio 74 0x0>;
         chipone,x-res = <1080>;
         chipone,y-res = <2400>;
         chipone,def-build-id = <0x0101>;
